test/spec_vectors/store/fail/module_17.wat
(module (memory 1) (func $type-address-empty (i32.store)))